# anna

./: .gitignore  CMakeLists.txt  README.md  launch.bat  launch.ps1
Source/App/: MvpFlow.h  SampleImportService.cpp  SampleImportService.h
Source/Assistant/: AssistantClient.cpp  TrackContextBuilder.cpp
Source/Audio/: AudioCommandQueue.h  AudioDiagnostics.cpp  AudioEngine.cpp  AudioEngine.h  ChannelMixer.cpp  ChannelMixer.h  LevelMeterBank.h  Mixer.cpp  NoteScheduler.cpp  NoteScheduler.h  OfflineExporter.cpp  OfflineExporter.h  PatternScheduler.cpp  PatternSnapshot.h  SampleVoice.h  Transport.h  VoicePool.cpp  VoicePool.h
Source/DSP/: OnsetDetector.h  RubberBandOfflineProcessor.cpp  RubberBandOfflineProcessor.h  RubberBandStreamProcessor.cpp  StretchBakeWorker.cpp  StretchBakeWorker.h
Source/Model/: Pattern.h  PatternStore.cpp  PatternStore.h  ProjectController.cpp  ProjectController.h  ProjectModel.h  SampleAsset.h  SampleManager.cpp  SampleManager.h  SampleOriginMetadata.h  SampleRefData.h  UndoHistory.cpp
Source/Patches/: SliceEditorPanel.cpp  SliceEditorPanel.h  StepSequencerComponent.cpp  StepSequencerComponent.h
Source/Persistence/: BeatSerializer.cpp  BeatSerializer.h  ProjectSerializer.cpp  ProjectSerializer.h
Source/Plugins/: ColorProcessor.cpp  ColorProcessor.h  CompressorProcessor.h  EqTypes.h  FxTypes.h  ParametricEqProcessor.cpp  ParametricEqProcessor.h  ReverbProcessor.cpp  ReverbProcessor.h
Source/Shell/: Application.cpp  MainComponent.cpp  MainComponent.h
Source/UI/: ArrangementTimelineComponent.cpp  ArrangementTimelineComponent.h  AssistantPanel.cpp  AssistantPanel.h  ColorEditorPanel.cpp  ColorEditorPanel.h  DelayEditorPanel.cpp  DelayEditorPanel.h  FxWorkspaceComponent.cpp  FxWorkspaceComponent.h  MixerComponent.cpp  PianoRollComponent.cpp  PianoRollComponent.h  ReverbEditorPanel.cpp  ReverbEditorPanel.h  SampleBrowserComponent.cpp  SampleBrowserComponent.h  SamprLookAndFeel.cpp  SamprLookAndFeel.h  TopNavBarComponent.cpp  TransportBarComponent.cpp  TransportBarComponent.h  WaveformComponent.h
Tests/: SamprUnitTests.cpp  run_e2e_smoke.ps1  run_smoke.ps1
agent-tools/: 1c09f2a6-5db1-488d-8a72-db4d1af922e6.txt
assistant/: .env.example  correlator.js  gemmaAssistant.js  package-lock.json  package.json  server.js
assistant/test/: smoke.js
cmake/: FetchRubberBand.cmake
sampr/: CMakeLists.txt  launch.bat  launch.ps1
sampr/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
sampr/Source/App/: MvpFlow.cpp  MvpFlow.h  SampleImportService.cpp  SampleImportService.h
sampr/Source/Assistant/: AssistantClient.cpp  AssistantClient.h  TrackContextBuilder.cpp  TrackContextBuilder.h
sampr/Source/Audio/: AudioCommand.h  AudioCommandQueue.cpp  AudioDiagnostics.h  AudioTypes.h  ChannelMixer.cpp  ChannelMixer.h  EqSnapshot.h  FxSnapshot.h  LevelMeterBank.cpp  Mixer.h  NoteScheduler.cpp  NoteSnapshot.h  OfflineExporter.cpp  OfflineExporter.h  PatternScheduler.cpp  PatternScheduler.h  SampleRegistry.cpp  SampleRegistry.h  SampleVoice.cpp  Transport.cpp
sampr/Source/DSP/: OnsetDetector.cpp  PeakGenerator.cpp  PeakGenerator.h  RubberBandOfflineProcessor.cpp  RubberBandOfflineProcessor.h  RubberBandStreamProcessor.cpp  RubberBandStreamProcessor.h  StretchBakeWorker.cpp
sampr/Source/Model/: ArrangementClip.h  MixerState.cpp  MixerState.h  NoteEvent.h  Pattern.h  PatternStore.cpp  PatternStore.h  ProjectController.cpp  ProjectController.h  ProjectModel.cpp  SampleAsset.h  SampleManager.cpp  SampleManager.h  SampleRefData.h  UndoHistory.h
sampr/Source/Patches/: SliceEditorPanel.cpp  SliceEditorPanel.h  StepSequencerComponent.cpp
sampr/Source/Persistence/: BeatSerializer.cpp  BeatSerializer.h  ProjectSerializer.cpp  ProjectSerializer.h
sampr/Source/Plugins/: CompressorProcessor.cpp  DelayProcessor.cpp  DelayProcessor.h  FxTypes.h  ReverbProcessor.cpp  ReverbProcessor.h
sampr/Source/Shell/: Application.cpp  MainComponent.cpp  MainComponent.h
sampr/Source/UI/: ArrangementTimelineComponent.cpp  ArrangementTimelineComponent.h  AssistantPanel.cpp  AssistantPanel.h  CompressorEditorPanel.cpp  CompressorEditorPanel.h  EqEditorPanel.cpp  EqEditorPanel.h  FxWorkspaceComponent.cpp  FxWorkspaceComponent.h  MixerComponent.cpp  MixerComponent.h  PianoRollComponent.cpp  SampleBrowserComponent.cpp  SampleBrowserComponent.h  SamprLookAndFeel.cpp  SamprLookAndFeel.h  SliceEditorPanel.cpp  SliceEditorPanel.h  StepSequencerComponent.cpp  TopNavBarComponent.cpp  TopNavBarComponent.h  TransportBarComponent.cpp  TransportBarComponent.h  WaveformComponent.cpp
sampr/Tests/: SamprUnitTests.cpp  run_e2e_smoke.ps1  run_smoke.ps1
sampr/assistant/: correlator.js  gemmaAssistant.js  package-lock.json  package.json  server.js
sampr/assistant/test/: smoke.js
sampr/cmake/: FetchRubberBand.cmake  OptionalTracktionEngine.cmake
terminals/: 1.txt
tools/: vocal_separate.py  youtube_sample_ingest.py
